# axum-content-negotiation

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  bacon.toml
.github/workflows/: cross_compile.yml  main.yml
src/: lib.rs
