[package]
name = "axum-content-negotiation"
description = "Axum middleware to use Accept and Content-Type headers to serialize with different formats"
keywords = ["axum-middleware", "middleware", "content-negotiation"]

version = "0.1.4"
edition = "2021"

authors = ["Bruno Tavares <connect+github@bltavares.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bltavares/axum-content-negotiation"
repository = "https://github.com/bltavares/axum-content-negotiation"

[dependencies]
axum = "0.8.4"
tower = "0.5.2"
serde = "1.0.219"
erased-serde = "0.4.6"

serde_json = { version = "1.0.140", optional = true }
simd-json = { version = "0.15.1", optional = true }

cbor4ii = { version = "1.0.0", optional = true, features = ["serde1"] }

# Form data support
serde_urlencoded = { version = "0.7.1", optional = true }

tracing = "0.1.41"

[features]
default = ["cbor", "simd-json", "default-json"]
json = ["serde_json"]
simd-json = ["dep:simd-json", "serde_json"]
cbor = ["cbor4ii"]
form-urlencoded = ["serde_urlencoded", "serde_json"]
default-json = []
default-cbor = []

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }

# Used by `cargo-run-bin`
[package.metadata.bin]
cargo-binstall = { version = "1.6.1" }
cargo-nextest = { version = "0.9.67", locked = true }
bacon = { version = "2.14.1", locked = true }
changelog = { version = "0.3.4" }
cargo-semver-checks = { version = "0.38.0" }
