[package]
name = "axum-content-negotiation"
description = "Axum middleware to use Accept and Content-Type headers to serialize with different formats"
keywords = ["axum-middleware", "middleware", "content-negotiation"]

version = "0.1.5"
edition = "2021"

authors = ["Bruno Tavares <connect+github@bltavares.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bltavares/axum-content-negotiation"
repository = "https://github.com/bltavares/axum-content-negotiation"

[dependencies]
axum = "0.8.6"
tower = "0.5.2"
serde = "1.0.228"
erased-serde = "0.4.8"

serde_json = { version = "1.0.145", optional = true }
simd-json = { version = "0.17.0", optional = true }

cbor4ii = { version = "1.1.1", optional = true, features = ["serde1"] }

tracing = "0.1.41"

[features]
default = ["cbor", "simd-json", "default-json"]
json = ["serde_json"]
simd-json = ["dep:simd-json", "serde_json"]
cbor = ["cbor4ii"]
default-json = []
default-cbor = []

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }

# Used by `cargo-run-bin`
[package.metadata.bin]
cargo-binstall = { version = "1.15.7" }
cargo-nextest = { version = "0.9.108", locked = true }
bacon = { version = "3.19.0", locked = true }
changelog = { version = "0.3.4" }
cargo-semver-checks = { version = "0.44.0" }
